--- a/package.json
+++ b/package.json
@@ -11,5 +11,7 @@
   "devDependencies": {
     "electron": "^5.0.6"
   },
-  "dependencies": {}
+  "dependencies": {
+    "sweetalert2": "^8.13.5"
+  }
 }
